@@ -24,6 +24,7 @@ Fixed bugs
 - fixed parallelism computation of dynamic cut selector to use Euclidean norm instead of unsupported argument
 - fixed that non-efficious cuts were not filtered out before checking dynamic parallelism in dynamic cut selector
 - fixes in nauty.h for 32bit systems
+- fixed SCIPgetDualSolVal() for a linear constraint with a single variable
 
 Miscellaneous
 -------------
